web socket impl

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,46 @@
       
     </div>
 </div> -->
-<div class="wrapper" [ngStyle]="userRole == 'ROLE_ADMIN' && {'height': '100vh'}">
-    <router-outlet></router-outlet>
+<div
+  class="wrapper"
+  [ngStyle]="userRole == 'ROLE_ADMIN' && { height: '100vh' }"
+>
+  <router-outlet></router-outlet>
+</div>
+
+<!--src\app\app.component.html-->
+<h1>Angular + WebSockets</h1>
+<br />
+<div class="row">
+  <div class="column">
+    <textarea
+      [(ngModel)]="content"
+      name="contentInput"
+      cols="40"
+      rows="5"
+    ></textarea>
+    <br />
+    <button (click)="sendMsg()">Send Message</button>
+  </div>
+</div>
+<br />
+<div>
+  <h1>Sent Messages</h1>
+  <br />
+  <ul>
+    <li *ngFor="let item of sent">
+      Source: {{ item.source }} -> Content {{ item.content }}
+    </li>
+  </ul>
+</div>
+
+<br />
+<div>
+  <h1>Received Messages</h1>
+  <br />
+  <ul>
+    <li *ngFor="let item of received">
+      Source: {{ item.source }} -> Content {{ item.content }}
+    </li>
+  </ul>
 </div>
