web rtc p2p connection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,45 +6,89 @@
     </div>
 </div> -->
 <div
-  class="wrapper"
+  class="wrapper position-relative"
   [ngStyle]="userRole == 'ROLE_ADMIN' && { height: '100vh' }"
 >
   <router-outlet></router-outlet>
-</div>
+  <ng-container *ngIf="isSHow">
+    <div class="chat-container position-absolute shadow-sm">
+      <div class="p-2" style="background-color: #d5d5d582">
+        <h6 class="fw-bold mb-10 pt-2 capitalize">Incoming Call...</h6>
+      </div>
+      <div class="shadow-md p-2 mt-5 d-flex justify-content-center">
+        <svg
+          style="
+            width: 150px;
+            padding: 20px;
+            height: 150px;
+            background: white;
+            padding: 12px;
+            border-radius: 10px;
+          "
+          xmlns="http://www.w3.org/2000/svg"
+          width="60"
+          height="60"
+          fill="#6d689e"
+          class="bi bi-person-circle rounded-md shadow-md"
+          viewBox="0 0 16 16"
+        >
+          <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+          <path
+            fill-rule="evenodd"
+            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
+          />
+        </svg>
+      </div>
 
-<!--src\app\app.component.html-->
-<h1>Angular + WebSockets</h1>
-<br />
-<div class="row">
-  <div class="column">
-    <textarea
-      [(ngModel)]="content"
-      name="contentInput"
-      cols="40"
-      rows="5"
-    ></textarea>
-    <br />
-    <button (click)="sendMsg()">Send Message</button>
-  </div>
-</div>
-<br />
-<div>
-  <h1>Sent Messages</h1>
-  <br />
-  <ul>
-    <li *ngFor="let item of sent">
-      Source: {{ item.source }} -> Content {{ item.content }}
-    </li>
-  </ul>
-</div>
-
-<br />
-<div>
-  <h1>Received Messages</h1>
-  <br />
-  <ul>
-    <li *ngFor="let item of received">
-      Source: {{ item.source }} -> Content {{ item.content }}
-    </li>
-  </ul>
+      <div
+        class="chat-content d-inline-flex flex-end pt-5 justify-content-center"
+      >
+        <div>
+          <button
+            (click)="sendSignal()"
+            class="btn border-0 text-white text-uppercase"
+            style="background: rgb(29, 222, 29)"
+            title="Recieve call"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-telephone"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"
+              />
+            </svg>
+            <h6>Accept</h6>
+          </button>
+        </div>
+        <div>
+          <button
+            class="btn btn-danger border-0 ml-3 text-uppercase"
+            (click)="end()"
+            title="End call"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-telephone-fill"
+              viewBox="0 0 16 16"
+              style="rotate: 130deg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"
+              />
+            </svg>
+            <h6>Reject</h6>
+          </button>
+        </div>
+      </div>
+    </div>
+  </ng-container>
 </div>
