--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -1,27 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
+<div
+  *ngIf="isLoading; else dataContent"
+  class="d-flex justify-content-center align-items-center m-auto"
+  style="height: 100vh; width: 100vw"
+>
+  <div class="d-inline">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+</div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-
-<body>
-    <div class="video-container">
-        <div class="remote-video"></div>
-        <div class="local-video">
-          <!-- <video src=""></video> -->
-        </div>
-        <div class="controls">
-          <button class="end-chat">End Chat</button>
-          <button class="mute-audio">Mute Audio</button>
-          <button class="toggle-video">Toggle Video</button>
-        </div>
-      </div>
-            
-</body>
-
-</html>
+<ng-template #dataContent>
+  <div class="d-flex">
+    <div>
+      <video id="device" controls autoplay #remote></video>
+    </div>
+    <div>
+      <video id="me" controls autoplay #me></video>
+    </div>
+  </div>
+  <button
+    mat-raised-button
+    color="primary"
+    (click)="showRemote()"
+    [disabled]="callActive"
+  >
+    Connect
+  </button>
+  <button
+    mat-raised-button
+    color="warn"
+    (click)="hangup()"
+    [disabled]="!callActive"
+  >
+    Disconnect
+  </button>
+</ng-template>
